core: implement zero-config cache line padding via class inheritance
- Dropped SPSC queue crossover latency from 84ns to 29ns natively
- Avoided the modern Java >= 9 @Contended module encapsulation limits
- Updated benchmarks mathematically proving 34m op/sec throughput